<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/calendar"
        android:icon="@drawable/ic_event"
        android:title="Calendar"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/baishak"
                android:title="@string/Baishakh"/>
            <item
                android:id="@+id/jestha"
                android:title="@string/Jestha"/>
            <item
                android:id="@+id/ashadh"
                android:title="@string/Ashadh"/>
            <item
                android:id="@+id/shrawan"
                android:title="@string/Shrawan"/>
            <item
                android:id="@+id/bhadra"
                android:title="@string/Bhadra"/>
            <item
                android:id="@+id/ashwin"
                android:title="@string/Ashwin"/>
            <item
                android:id="@+id/kartik"
                android:title="@string/Kartik"/>
            <item
                android:id="@+id/mangsir"
                android:title="@string/Mangsir"/>
            <item
                android:id="@+id/poush"
                android:title="@string/Poush"/>
            <item
                android:id="@+id/magh"
                android:title="@string/Magh"/>
            <item
                android:id="@+id/falgun"
                android:title="@string/Falgun"/>
            <item
                android:id="@+id/chaitra"
                android:title="@string/Chaitra"/>
        </menu>
    </item>
    <!-- <item
        android:id="@+id/search"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@drawable/abc_ic_search_api_mtrl_alpha"
        android:title="Search Riti-Riwaj"
        app:showAsAction="always"/> -->

</menu>