<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cardViewHolder"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <ImageView
        android:id="@+id/icon"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:scaleType="centerCrop" />

    <RelativeLayout
        android:id="@+id/descHolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/icon"
        android:layout_centerHorizontal="true"
        android:background="#85000000"
        android:padding="5dp" >

        <TextView
            android:id="@+id/txt_riwaj_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:text="@string/riwaj_title"
            android:textColor="#fff"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_riwaj_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_riwaj_title"
            android:paddingLeft="10dp"
            android:text="@string/riwaj_date"
            android:textColor="@color/simrik_red"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_riwaj_rem_days"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_riwaj_date"
            android:paddingLeft="10dp"
            android:text="@string/riwaj_date_remaining"
            android:textColor="#3399FF"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/personaliseText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_riwaj_title"
            android:layout_marginTop="3dp"
            android:alpha="0.8"
            android:background="@drawable/white_button_selector"
            android:paddingLeft="10dp"
            android:text="@string/add_to_calendar"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="invisible" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/whatProcVidHolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/descHolder"
        android:background="@drawable/bg_white_dropshadow" >

        <TextView
            android:id="@+id/whatTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:paddingBottom="8dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:text="@string/riwaj_what"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </RelativeLayout>

</RelativeLayout>