<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:fillViewport="true"
    tools:context=".ReasonsAndCommentsActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/reasonHearder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/simrik_red"
            android:padding="10dp"
            android:text="@string/reason"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#fff"
            android:textStyle="bold" />

        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#aaa" />

        <TextView
            android:id="@+id/religiousReasonHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_white_dropshadow"
            android:padding="3dp"
            android:text="@string/religious_reason"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/religiousReasonTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="#fff"
            android:padding="5dp"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/scientificReasonHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/bg_white_dropshadow"
            android:padding="3dp"
            android:text="@string/scientific_reason"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/scientificReasonTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="#fff"
            android:padding="5dp"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            android:id="@+id/commentingSection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="#fff"
            android:orientation="horizontal"
            android:padding="5dp"
            android:weightSum="1" >

            <EditText
                android:id="@+id/commentEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rounded_corner_red"
                android:ems="10"
                android:hint="@string/feedback"
                android:inputType="textMultiLine"
                android:minLines="2"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="5dp" />

            <ImageButton
                android:id="@+id/commentButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="5dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_action_send_now"
                android:textColor="#fff"
                android:textStyle="bold"
                android:tint="@color/simrik_red" />
        </LinearLayout>

        <ListView
            android:id="@+id/commentsListView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >
        </ListView>
    </LinearLayout>

</ScrollView>