<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/calendarEventsHolder"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/bg_white_dropshadow"
        android:orientation="horizontal"
        android:paddingBottom="1dp" >

        <RelativeLayout
            android:id="@+id/upComingCalEventsHolder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.6" >

            <ImageView
                android:id="@+id/ritualImage"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/banner" />

            <RelativeLayout
                android:id="@+id/descHolder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/ritualImage"
                android:background="#85000000"
                android:padding="5dp" >

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="@string/app_name"
                    android:textColor="#fff"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/date_of_riwaj"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/title"
                    android:paddingLeft="10dp"
                    android:text="@string/app_name"
                    android:textColor="@color/simrik_red"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/date_of_riwaj"
                    android:paddingLeft="10dp"
                    android:text="@string/app_name"
                    android:textColor="#3399FF"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </RelativeLayout>
        </RelativeLayout>

        <Button
            android:id="@+id/calendarEventsButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/facebook_button_selector"
            android:drawableBottom="@drawable/calendar51"
            android:text="@string/upcoming_events"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/bg_white_dropshadow"
        android:orientation="horizontal"
        android:paddingBottom="1dp" >

        <include
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            layout="@layout/pinned_event_layout" />

        <include
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            layout="@layout/pinned_event_layout" />

        <Button
            android:id="@+id/personalEventsButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/facebook_button_selector"
            android:drawableBottom="@drawable/calendar52"
            android:text="@string/personal_events"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/bg_white_dropshadow"
        android:orientation="horizontal"
        android:paddingBottom="1dp" >

        <Button
            android:id="@+id/eMarketButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/facebook_button_selector"
            android:drawableBottom="@drawable/shopping_bag"
            android:text="@string/emarket"
            android:textSize="20sp" />

        <include
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            layout="@layout/pinned_event_layout" />

        <include
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            layout="@layout/pinned_event_layout" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/gamesEventsHolder"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/bg_white_dropshadow"
        android:orientation="horizontal"
        android:paddingBottom="1dp" >

        <Button
            android:id="@+id/gamesButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/facebook_button_selector"
            android:drawableBottom="@drawable/gamepad1"
            android:text="@string/games"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/gameImage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.6"
            android:scaleType="centerCrop"
            android:src="@drawable/banner" />
    </LinearLayout>

</LinearLayout>